src/main/grammar/Cfg.bnf
{
    parserClass="arma.config.parser.CfgParser"
    psiPackage="arma.config.psi"
    psiImplPackage="arma.config.psi.impl"
    elementTypeHolderClass="arma.config.psi.CfgTypes"
    elementTypeClass="arma.config.psi.CfgElementType"
    tokenTypeClass="arma.config.psi.CfgTokenType"

    tokens = [
        LBRACE      = '{'
        RBRACE      = '}'
        LBRACKET    = '['
        RBRACKET    = ']'
        EQUAL       = '='
        SEMICOLON   = ';'
        COMMA       = ','
        COLON       = ':'
        LPAREN      = '('
        RPAREN      = ')'
        PLUS        = '+'
        MINUS       = '-'
        STAR        = '*'
        SLASH       = '/'
        PERCENT     = '%'
        CARET       = '^'
        LT          = '<'
        GT          = '>'
        EXCL        = '!'
        SINGLE_HASH = '#'
        DOUBLE_HASH = '##'
        AMPERSAND   = '&'
        BACKSLASH   = '\'
        DOT         = '.'


        CLASS_KEYWORD   = 'class'
        DELETE_KEYWORD  = 'delete'
        MIN_KEYWORD     = 'min'
        MAX_KEYWORD     = 'max'

        TEXT            = "TEXT"
        NUMBER          = "NUMBER"
        LINE_COMMENT    = "LINE_COMMENT"
        BLOCK_COMMENT   = "BLOCK_COMMENT"
        PREPROCESSOR    = "PREPROCESSOR"
        STRING          = "STRING"
        SINGLE_QUOTE    = "SINGLE_QUOTE"

        // Char names can be based on https://www.ascii-code.com/
        // Stuff after = is basically just documentation/suggestion on what they are and doesnt do anything
    ]
}


root ::= item*

private item ::= identifier SEMICOLON
               | classBlock
               | deleteBlock
               | PREPROCESSOR
               | LINE_COMMENT
               | BLOCK_COMMENT

///////// MACRO /////////

private macroElement ::= LBRACE
                       | RBRACE
                       | LBRACKET
                       | RBRACKET
                       | EQUAL
                       | SEMICOLON
                       | COLON
                       | PLUS
                       | MINUS
                       | STAR
                       | SLASH
                       | BACKSLASH
                       | PERCENT
                       | CARET
                       | AMPERSAND
                       | GT
                       | LT
                       | EXCL
                       | SINGLE_HASH
                       | DOUBLE_HASH
                       | CLASS_KEYWORD
                       | DELETE_KEYWORD
                       | MIN_KEYWORD
                       | MAX_KEYWORD
                       | BLOCK_COMMENT
                       | TEXT
                       | NUMBER
                       | STRING
                       | SINGLE_QUOTE
                       | COMMA
                       | DOT

private macroAtom ::= macroElement | LPAREN macroAtom+ RPAREN

macroBody ::= TEXT LPAREN macroAtom+ RPAREN

private macroConcat ::= macroBody | TEXT

identifier ::= macroConcat (DOUBLE_HASH macroConcat)*

///////// CLASS /////////

classBody ::= LBRACE classItem* RBRACE
{pin=1}

classBlock ::= CLASS_KEYWORD identifier classExtension? classBody? SEMICOLON
{pin=1}


classExtension ::= COLON identifier


private classItem ::= parameterBlock
                    | arrayBlock
                    | item

///////// DELETE /////////

deleteBlock ::= DELETE_KEYWORD identifier SEMICOLON

///////// PARAMETER /////////

parameterValue ::= identifier
                 | mathBlock
                 | STRING
                 | SINGLE_QUOTE
                 | NUMBER

parameterBlock ::= identifier EQUAL parameterValue SEMICOLON
{pin=2}

///////// ARRAY /////////

private arrayElement ::= parameterValue | arrayBody

arrayBody ::= LBRACE (arrayElement (COMMA arrayElement)* COMMA?)? RBRACE

arrayBlock ::= identifier LBRACKET RBRACKET PLUS? EQUAL arrayBody SEMICOLON
{pin=3}

///////// MATH /////////

mathBlock ::= MINUS? mathElement (mathOperator MINUS? mathElement)*

mathOperator ::= PLUS
               | MINUS
               | SLASH
               | STAR
               | PERCENT
               | MIN_KEYWORD
               | MAX_KEYWORD
               | CARET
               | GT
               | LT

mathElement ::= TEXT
              | NUMBER
              | LPAREN mathBlock RPAREN
